--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 
 <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.css">
 
   <title>BookListApp</title>
   <base href="/">
