--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
   <script src="./assets/js/jquery.js"></script>
   <script src="./assets/js/popper.js"></script>
   <script src="./assets/bootstrap/js/bootstrap.js"></script>
+  <script src="./assets/js/sweetalert2.js"></script>
 </body>
 </html>
